# pure-worker

./: .gitignore  AGENTS.md  AI_CAPABILITY_CHECK_REPORT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_add_soft_delete_to_conversation.sql  0002_audit_detail.sql  0003_schedule_file.sql  0004_m3_tables.sql  0005_ai_config.sql  0006_m4_enhancements.sql  0007_m5_settings.sql  0008_task_recovery.sql  0009_skill_seed_data.sql  0010_agent_skills_spec.sql  0011_prompt_template_registry.sql  0012_lesson_record.sql  0013_teacher_memory.sql  0014_multi_model_config.sql  0016_execution_runtime.sql  0017_batch_sub_execution.sql
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: activity_announcement.rs  ai_config.rs  ai_generation.rs  ai_param_preset.rs  approval.rs  assignment_grading.rs  chat.rs  classroom.rs  conversation.rs  execution.rs  export.rs  global_shortcut.rs  initialization.rs  lesson_record.rs  log.rs  mcp_server.rs  memory_search.rs  mod.rs  observation_note.rs  parent_communication.rs  profile.rs  schedule_event.rs  schedule_file.rs  score_record.rs  semester_comment.rs  settings.rs  skill.rs  skill_executor.rs  skill_store.rs  storage_lifecycle.rs  student.rs  student_import.rs  student_memory.rs  student_tag.rs  task.rs  teacher_memory.rs  template_file.rs  uv_manager.rs  watch_folder.rs
apps/desktop/src-tauri/src/database/: mod.rs
apps/desktop/src-tauri/src/models/: activity_announcement.rs  agentic_search.rs  ai_config.rs  ai_param_preset.rs  app_settings.rs  approval_request.rs  assignment_grading.rs  async_task.rs  audit_log.rs  batch_sub_execution.rs  classroom.rs  conversation.rs  execution.rs  global_shortcut.rs  lesson_record.rs  mcp_server.rs  memory_search.rs  mod.rs  observation_note.rs  parent_communication.rs  schedule_event.rs  schedule_file.rs  score_record.rs  semester_comment.rs  skill.rs  storage_lifecycle.rs  student.rs  student_import.rs  student_memory.rs  student_tag.rs  teacher_memory.rs  teacher_profile.rs  template_file.rs  watch_folder.rs
apps/desktop/src-tauri/src/services/: activity_announcement.rs  agentic_search.rs  agentic_search_agent.rs  ai_generation.rs  ai_param_preset.rs  app_settings.rs  approval.rs  assignment_grading.rs  async_task.rs  audit.rs  classroom.rs  conversation_service.rs  desensitize.rs  global_shortcut.rs  high_risk_gate.rs  intent_classifier.rs  keychain.rs  mod.rs  (+37 more)
(+101 files in other folders)
