[package]
name = "pure-worker"
version = "0.1.0"
edition = "2021"

[lib]
name = "pure_worker_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
calamine = { version = "0.26", features = ["dates"] }
regex = "1"
toml = "0.8"
rig-core = { version = "0.32.0", default-features = false, features = ["reqwest-rustls"] }
schemars = "1.0"
futures = "0.3"
base64 = "0.22"
