[package]
name = "pure-worker"
version = "0.1.0"
edition = "2021"
default-run = "pure-worker"

[lib]
name = "pure_worker_lib"
path = "src/lib.rs"

# 主应用二进制（Tauri 入口）
[[bin]]
name = "pure-worker"
path = "src/main.rs"

# 绑定导出工具（仅用于开发阶段导出 TypeScript 绑定，不参与打包）
[[bin]]
name = "export-bindings"
path = "src/bin/export-bindings.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
specta = { version = "=2.0.0-rc.22", features = ["serde_json"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
calamine = { version = "0.26", features = ["dates"] }
regex = "1"
toml = "0.8"
rig-core = { version = "0.32.0", default-features = false, features = ["reqwest-rustls"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "1.0"
futures = "0.3"
base64 = "0.22"
rust_xlsxwriter = "0.79"
image = "0.25"
docx-rs = "0.4"
meval = "0.2"
keyring = "3"
zip = "2"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["load-dynamic"] }
